[package]
name = "asciifyer"
version = "0.1.0"
authors = ["Evan Maddock <maddock.evan@vivaldi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "*"
reqwest = { version = "0.10" }
tempfile = "3.1"
tokio = { version = "0.2", features = ["full"] }
