[package]
name = "asciifyer"
version = "0.1.0"
authors = ["Evan Maddock <maddock.evan@vivaldi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fetch = ["reqwest", "tempfile", "tokio"]

[dependencies]
image = "*"
reqwest = { version = "0.10", optional = true }
tempfile = { version = "3.1", optional = true }
tokio = { version = "0.2", features = ["full"], optional = true}
