[package]
name = "asciifyer"
description = "Rust library to easily turn images into ASCII art"
version = "0.1.1"
authors = ["Evan Maddock <maddock.evan@vivaldi.net>"]
categories = ["multimedia::images"]
keywords = ["ascii", "graphics", "images"]
repository = "https://github.com/EbonJaeger/asciifyer"
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fetch = ["reqwest", "tempfile", "tokio"]

[dependencies]
image = "0.23"
reqwest = { version = "0.10", optional = true }
tempfile = { version = "3.1", optional = true }
tokio = { version = "0.2", features = ["full"], optional = true}
